# serverless-app

./: README.md  buildspec-build.yml  buildspec-test.yml  buildspec.yml
.devcontainer/: Dockerfile  devcontainer.json
api/contacts/: README.md  alembic.ini  build.sh  pyproject.toml
api/contacts/alembic/: env.py
api/contacts/alembic/versions/: ee3ba0b8ba14_create_contacts_table.py
api/contacts/contacts/: handler.py
api/contacts/tests/: test_handler.py
api/hello/: pyproject.toml
api/hello/tests/: test_handler.py
bff/auth/: .gitignore  pyproject.toml
bff/auth/auth/: __init__.py  handler.py  identity.py  storage.py
bff/auth/tests/: test_handler.py  test_identity.py  test_storage.py
frontend/: .prettierignore  build.sh  eslint.config.js  package-lock.json  package.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts  preview.tsx
frontend/.storybook/public/: mockServiceWorker.js
frontend/src/: App.test.tsx  auth.tsx  contacts.ts  main.tsx
frontend/src/components/: ChartUserByCountry.tsx  CustomizedDataGrid.tsx  ForgotPasswordDialog.stories.tsx  ForgotPasswordDialog.tsx  Layout.tsx  LoginForm.stories.tsx  LoginForm.tsx  MainGrid.tsx  PageViewsBarChart.tsx  SideMenu.tsx
frontend/src/dashboard/: Dashboard.stories.tsx  Dashboard.tsx  TemplateFrame.tsx
frontend/src/login/: ForgotPassword.stories.tsx  Login.stories.tsx  Login.tsx
frontend/src/routes/: contact.tsx  destroy.tsx  edit.tsx  guard.tsx  index.tsx  login.tsx  root.tsx
frontend/src/sign-in/: ForgotPassword.tsx  SignIn.stories.tsx  SignIn.tsx  TemplateFrame.tsx
frontend/src/signin/: CustomIcons.tsx  ForgotPassword.tsx  SignIn.stories.tsx  SignIn.tsx  TemplateFrame.tsx
frontend/src/theme/: AppBar.tsx  ColorModeProvider.tsx  Layout.tsx  TemplateFrame.tsx  (+5 more)
gauge/: manifest.json  package-lock.json  package.json  tsconfig.json
gauge/specs/: example.spec
gauge/tests/: StepImplementation.ts
pipeline/: main.tf  variables.tf
scripts/: build.sh  check.sh  deploy.sh  test.sh
terraform/: .terraform.lock.hcl  main.tf  output.tf  terraform.tf
(+35 files in other folders)
