[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Yuto Nagano <chamelion@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.4"
botocore = "^1.35.4"

[tool.poetry-plugin-lambda-build]
package-artifact-path = "dist/package.zip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
