[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Yuto Nagano <chamelion@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.14"
botocore = "^1.35.14"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
moto = "^5.0.13"
joserfc = "^1.0.0"
types-pyyaml = "^6.0.12.20240808"
types-aws-xray-sdk = "^2.14.0.20240606"
types-colorama = "^0.4.15.20240311"
types-python-dateutil = "^2.9.0.20240906"
types-python-jose = "^3.3.4.20240106"
types-requests = "^2.32.0.20240907"
types-xmltodict = "^0.13.0.3"
boto3-stubs = "^1.35.14"

[tool.poetry-plugin-lambda-build]
package-artifact-path = "dist/package.zip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
